# eve_overlay

./: .gitignore  README.md  base_api_client.py  cache.py  cache_stats.py  config.py  config.yaml  console_log.py  cvui.py  debug_evekill.py  dps_meter.py  dscan_analyzer.py  dscan_analyzer_old.py  dscan_analyzer_pygui.py  esi.py  eve_overlay.py  eve_overlay.spec  evekill.py  gen_sounds.py  icon.py  ipc.py  log_reader.py  logger.py  opencv_scrollbar.py  overlay.py  pilot_color_classifier.py  pixi.toml  prepare_release.bat  pyproject.toml  ship_data.py  ships.json  supervisor.py  test_client.html  test_evekill_stats.py  test_pygui.py  test_render_aggr.py  test_renderpilots.py  test_zkill_stats.py  tray.py  utils.py  (+1 more)
char_cache/: README.md  build_cache_file.py  check_jita_characters.py  collect_evekill_char.py  collect_evekill_stats.py  download_characters.py  extract_char_info.py  extract_unique_corps_alliances.py  fetch_corp_alliance_names.py  merge_ek_stats.py  test_compression.py  test_jita_trie.py
services/: __init__.py  dscan_service.py  models.py  pilot_service.py
services/api/: __init__.py  client.py  schemas.py  server.py
test_data/: dscan_dscan.txt  dscan_local.txt  dscan_local_big.txt
tests/: test_draw_text.py  test_evekill_stats.py  test_text_size.py  test_zkill_stats.py
