[project]
name = "eve_overlay"
version = "0.1.0"
authors = [{ name = "cryonox", email = "cryonox@gmail.com" }]
requires-python = "==3.13"
dependencies = [
    "pyinstaller>=6.15.0,<7",
    "pyyaml>=6.0.2,<7",
    "global-hotkeys>=0.1.7,<0.2",
    "tqdm>=4.67.1,<5",
    "pyperclip>=1.9.0,<2",
    "pywin32>=311,<312",
    "aiohttp>=3.12.15,<4",
    "requests>=2.32.5,<3",
    "marisa-trie>=1.3.1,<2",
    "leb128>=1.0.8,<2",
    "loguru>=0.7.3,<0.8",
    "dearpygui>=2.1.1,<3",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.dependencies]
python = "==3.13"
pip = ">=25.0.1,<26"
